kubernetes/apps/home/home-assistant/app/oauth2-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-home-assistant
  namespace: home
  labels:
    app: oauth2-proxy-home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy-home-assistant
  template:
    metadata:
      labels:
        app: oauth2-proxy-home-assistant
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.1
          args:
            - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
            - --http-address=0.0.0.0:4180
          ports:
            - containerPort: 4180
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /etc/oauth2_proxy
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: oauth2-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-home-assistant
  namespace: home
spec:
  selector:
    app: oauth2-proxy-home-assistant
  ports:
    - name: http
      port: 4180
      targetPort: http
